# AgenticRAGDemo

./: .cursorrules  .gitignore  README.md  cursor_json.md  pyproject.toml  requirements.txt  start_server.py
src/: __init__.py  config.py  main.py
src/agents/: extraction_agent.py  project_retrival_agent.py  query_agent.py  relationships_retrival_agent.py  validation_agent.py
src/api/: deps.py  errors.py
src/api/api_v1/: __init__.py  agent.py
src/knowledges/: projects_csv_knowledge.py  projects_data.csv  relationships_csv_knowledge.py  relationships_data.csv
src/schemas/: agent.py  base.py
src/teams/: leader.py
src/utils/: common_utils.py
test/: README.md  __init__.py  run_all_tests.py  test_agent_team.py  test_csv_data.py  test_knowledge.py  test_knowledge_loading.py  test_team_flow.py
tools/learn_script/: basic_agent.py
