[project]
name = "agenticragdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liuchao", email = "lc_kelvin@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.5",
    "aiofiles>=24.1.0",
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "openai>=1.97.0",
    "pgvector>=0.4.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[tool.ruff]
select = ["E", "F", "I"]  
